<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#11000000">

    <TextView
        android:id="@+id/id"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/id"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="@dimen/dp_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/first_name"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/last_name"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/company"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/lastName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createdDate"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/created_date"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/company"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/status"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/createdDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/phone"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/status"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/mobile"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/phone"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/dp_8"
        android:text="@string/email"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/sort_ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/mobile"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>